--- a/CSS/Everything Else Day CSS.css
+++ b/CSS/Everything Else Day CSS.css
@@ -1,7 +1,7 @@
 /*Everything Else CSS*/
 
 body {
-	background-image:url('../images/clouds%201.png');
+	background-image:url('../Images/Circle-blues.png');
 }
 
 .center {
