--- a/CSS/Everything Else Night CSS.css
+++ b/CSS/Everything Else Night CSS.css
@@ -1,7 +1,7 @@
 /*Everything Else CSS*/
 
 body {
-	background-image:url('../images/Stars.gif');
+	background-image:url('../Images/Stars-Pixel.gif');
 }
 
 .center {
