--- a/CSS/Pages-Day-CSS.css
+++ b/CSS/Pages-Day-CSS.css
@@ -1,7 +1,7 @@
 /*Social CSS*/
 
 body {
-	background-image:url('../images/Clouds%201.png');
+	background-image:url('../Images/Circle-blues.png');
 }
 
 .center {
