--- a/CSS/Pages-Night-CSS.css
+++ b/CSS/Pages-Night-CSS.css
@@ -1,7 +1,7 @@
 /*Social CSS*/
 
 body {
-	background-image:url('../images/stars.gif');
+	background-image:url('../Images/Stars-Pixel.gif');
 }
 
 .center {
