--- a/CSS/School Stuff Day.css
+++ b/CSS/School Stuff Day.css
@@ -1,7 +1,7 @@
 /*School Stuff Day CSS*/
 
 body {
-	background-image:url('../images/Clouds%201.png');
+	background-image:url('../Images/Circle-blues.png');
 }
 .center {
 	text-align:center;
