--- a/CSS/School Stuff Night.css
+++ b/CSS/School Stuff Night.css
@@ -1,7 +1,7 @@
 /*School Stuff Night CSS*/
 
 body {
-	background-image:url('../images/stars.gif');
+	background-image:url('../Images/Stars-Pixel.gif');
 }
 .center {
 	text-align:center;
