--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -1,12 +1,13 @@
 /*HomePage CSS*/
 
 body {
-	background-image:url('../images/Stars.gif');
+	background-image:url('../Images/background.png');
 }
 
 .center {
+	color: white;
 	text-align:center;
-	text-shadow: 1px 1px #d5db12;
+	text-shadow: 1px 1px black;
 }
 
 .text{
@@ -18,16 +19,16 @@ body {
 	font-weight:bold;
 }
 .date {
-	color: black;
+	color: white;
 	font-weight:bold;
 	font-size: 32px;
-	text-shadow: 2px 2px #d5db12;
+	text-shadow: 2px 2px black;
 }
 
 .ip {
 	font-size: 28px;
-	color:#c91c1c;
-	text-shadow: 2px 2px #d5db12;
+	color:white;
+	text-shadow: 2px 2px black;
 }
 
 table {
