--- a/CSS/Pages.css
+++ b/CSS/Pages.css
@@ -1,7 +1,13 @@
 /*Social CSS*/
 
 body {
-	background-image:url('../Images/Stars-Pixel.gif');
+	background-image:url('../Images/background.png');
+}
+
+table.tableformat {
+  border-collapse: separate;
+  border-spacing: 10px;
+  *border-collapse: expression('separate', cellSpacing='10px');
 }
 
 .center {
